# public/swagger.json
@@ -6,6 +6,25 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"mongoose.Types.ObjectId": {
+				"type": "string"
+			},
+			"ICollege": {
+				"properties": {
+					"_id": {
+						"$ref": "#/components/schemas/mongoose.Types.ObjectId"
+					},
+					"name": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"_id",
+					"name"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"IUser": {
 				"properties": {
 					"_id": {
@@ -52,6 +71,9 @@
 							"type": "string"
 						},
 						"type": "array"
+					},
+					"college": {
+						"$ref": "#/components/schemas/ICollege"
 					}
 				},
 				"required": [
@@ -79,9 +101,6 @@
 				],
 				"type": "object",
 				"additionalProperties": false
-			},
-			"mongoose.Types.ObjectId": {
-				"type": "string"
 			},
 			"ICategory": {
 				"properties": {
@@ -113,22 +132,6 @@
 			},
 			"ICreateCategory": {
 				"$ref": "#/components/schemas/Pick_ICategory.name_"
-			},
-			"ICollege": {
-				"properties": {
-					"_id": {
-						"$ref": "#/components/schemas/mongoose.Types.ObjectId"
-					},
-					"name": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"_id",
-					"name"
-				],
-				"type": "object",
-				"additionalProperties": false
 			},
 			"ICondition": {
 				"properties": {
@@ -172,6 +175,125 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"IProduct": {
+				"properties": {
+					"_id": {
+						"$ref": "#/components/schemas/mongoose.Types.ObjectId"
+					},
+					"name": {
+						"type": "string"
+					},
+					"thumbnail": {
+						"type": "string"
+					},
+					"gallery": {
+						"items": {
+							"$ref": "#/components/schemas/Image"
+						},
+						"type": "array"
+					},
+					"price": {
+						"type": "number",
+						"format": "double"
+					},
+					"condition": {
+						"$ref": "#/components/schemas/mongoose.Types.ObjectId"
+					},
+					"category": {
+						"$ref": "#/components/schemas/mongoose.Types.ObjectId"
+					},
+					"description": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"_id",
+					"name",
+					"thumbnail",
+					"gallery",
+					"price",
+					"condition",
+					"category",
+					"description"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IOrderResponse": {
+				"properties": {
+					"_id": {
+						"type": "string"
+					},
+					"phone": {
+						"type": "string"
+					},
+					"product": {
+						"$ref": "#/components/schemas/IProduct"
+					},
+					"orderer": {
+						"$ref": "#/components/schemas/IUser"
+					}
+				},
+				"required": [
+					"_id",
+					"phone",
+					"product",
+					"orderer"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IOrder": {
+				"properties": {
+					"_id": {
+						"type": "string"
+					},
+					"product": {
+						"$ref": "#/components/schemas/mongoose.Types.ObjectId"
+					},
+					"orderer": {
+						"$ref": "#/components/schemas/mongoose.Types.ObjectId"
+					},
+					"phone": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"_id",
+					"product",
+					"orderer",
+					"phone"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Pick_IOrder.Exclude_keyofIOrder._id__": {
+				"properties": {
+					"product": {
+						"$ref": "#/components/schemas/mongoose.Types.ObjectId"
+					},
+					"orderer": {
+						"$ref": "#/components/schemas/mongoose.Types.ObjectId"
+					},
+					"phone": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"product",
+					"orderer",
+					"phone"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_IOrder._id_": {
+				"$ref": "#/components/schemas/Pick_IOrder.Exclude_keyofIOrder._id__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"IOrderDto": {
+				"$ref": "#/components/schemas/Omit_IOrder._id_"
 			},
 			"IProductResponse": {
 				"properties": {
@@ -226,6 +348,24 @@
 							"_id"
 						],
 						"type": "object"
+					},
+					"college": {
+						"properties": {
+							"name": {
+								"type": "string"
+							},
+							"_id": {
+								"$ref": "#/components/schemas/mongoose.Types.ObjectId"
+							}
+						},
+						"required": [
+							"name",
+							"_id"
+						],
+						"type": "object"
+					},
+					"owner": {
+						"$ref": "#/components/schemas/IUser"
 					}
 				},
 				"required": [
@@ -241,13 +381,13 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"IProduct": {
+			"ISingleProductResponse": {
 				"properties": {
-					"_id": {
-						"$ref": "#/components/schemas/mongoose.Types.ObjectId"
-					},
 					"name": {
 						"type": "string"
+					},
+					"_id": {
+						"$ref": "#/components/schemas/mongoose.Types.ObjectId"
 					},
 					"thumbnail": {
 						"type": "string"
@@ -262,25 +402,74 @@
 						"type": "number",
 						"format": "double"
 					},
-					"condition": {
-						"$ref": "#/components/schemas/mongoose.Types.ObjectId"
-					},
-					"category": {
-						"$ref": "#/components/schemas/mongoose.Types.ObjectId"
-					},
 					"description": {
 						"type": "string"
+					},
+					"condition": {
+						"properties": {
+							"name": {
+								"type": "string"
+							},
+							"_id": {
+								"$ref": "#/components/schemas/mongoose.Types.ObjectId"
+							}
+						},
+						"required": [
+							"name",
+							"_id"
+						],
+						"type": "object"
+					},
+					"category": {
+						"properties": {
+							"name": {
+								"type": "string"
+							},
+							"_id": {
+								"$ref": "#/components/schemas/mongoose.Types.ObjectId"
+							}
+						},
+						"required": [
+							"name",
+							"_id"
+						],
+						"type": "object"
+					},
+					"college": {
+						"properties": {
+							"name": {
+								"type": "string"
+							},
+							"_id": {
+								"$ref": "#/components/schemas/mongoose.Types.ObjectId"
+							}
+						},
+						"required": [
+							"name",
+							"_id"
+						],
+						"type": "object"
+					},
+					"owner": {
+						"$ref": "#/components/schemas/IUser"
+					},
+					"similar": {
+						"items": {
+							"$ref": "#/components/schemas/IProductResponse"
+						},
+						"type": "array"
 					}
 				},
 				"required": [
-					"_id",
 					"name",
+					"_id",
 					"thumbnail",
 					"gallery",
 					"price",
+					"description",
 					"condition",
 					"category",
-					"description"
+					"similar"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -758,6 +947,163 @@
 				"parameters": []
 			}
 		},
+		"/api/orders": {
+			"get": {
+				"operationId": "GetOrders",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/IOrderResponse"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Orders"
+				],
+				"security": [],
+				"parameters": []
+			},
+			"post": {
+				"operationId": "CreateOrder",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IOrder"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Orders"
+				],
+				"security": [
+					{
+						"jwtAuth": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/IOrderDto"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/orders/{orderId}": {
+			"get": {
+				"operationId": "GetOrder",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IOrderResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Orders"
+				],
+				"security": [],
+				"parameters": []
+			},
+			"delete": {
+				"operationId": "DeleteOrder",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "string"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Orders"
+				],
+				"security": [
+					{
+						"jwtAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "orderId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"put": {
+				"operationId": "UpdateOrder",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IOrder"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Orders"
+				],
+				"security": [
+					{
+						"jwtAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "orderId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/IOrderDto"
+							}
+						}
+					}
+				}
+			}
+		},
 		"/api/products": {
 			"get": {
 				"operationId": "GetProducts",
@@ -818,6 +1164,26 @@
 			}
 		},
 		"/api/products/{productId}": {
+			"get": {
+				"operationId": "GetProduct",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ISingleProductResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Products"
+				],
+				"security": [],
+				"parameters": []
+			},
 			"delete": {
 				"operationId": "DeleteProduct",
 				"responses": {
